<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cultured"
    tools:context=".presentation.stats.StatsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/title_stats"
        app:titleCentered="true"
        app:titleTextAppearance="@style/ToolbarTitleTextAppearance" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCard"
        style="@style/DropdownTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoCompleteTextViewCard"
            style="@style/DropdownAutoCompleteEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_card_espresso"
            android:drawablePadding="16dp"
            android:text="Expresso MC" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutYear"
        style="@style/DropdownTextInputLayoutStyle"
        android:layout_width="120dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/textInputLayoutCard"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutCard">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoCompleteTextViewYear"
            style="@style/DropdownAutoCompleteEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="2021" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutMonth"
        style="@style/DropdownTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/textInputLayoutCard"
        app:layout_constraintStart_toEndOf="@id/textInputLayoutYear"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutCard">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoCompleteTextViewMonth"
            style="@style/DropdownAutoCompleteEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="August" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_top"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutYear">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingTop="29dp">

            <TextView
                android:id="@+id/textViewExpenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1 300 000"
                android:textColor="@color/raisin_black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/textViewIncomings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewLabelExpenses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_expenses"
                android:textAlignment="center"
                android:textColor="@color/princeton_orange"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/textViewExpenses"
                app:layout_constraintStart_toStartOf="@id/textViewExpenses"
                app:layout_constraintTop_toBottomOf="@id/textViewExpenses" />

            <TextView
                android:id="@+id/textViewIncomings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1 700 000"
                android:textColor="@color/raisin_black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/textViewCashback"
                app:layout_constraintStart_toEndOf="@id/textViewExpenses"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewLabelIncomings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_incomings"
                android:textAlignment="center"
                android:textColor="@color/princeton_orange"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/textViewIncomings"
                app:layout_constraintStart_toStartOf="@id/textViewIncomings"
                app:layout_constraintTop_toBottomOf="@id/textViewIncomings" />

            <TextView
                android:id="@+id/textViewCashback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100 500"
                android:textColor="@color/raisin_black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textViewIncomings"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewLabelCashback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_cashback"
                android:textAlignment="center"
                android:textColor="@color/princeton_orange"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/textViewCashback"
                app:layout_constraintStart_toStartOf="@id/textViewCashback"
                app:layout_constraintTop_toBottomOf="@id/textViewCashback" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="25dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toBottomOf="@id/textViewLabelIncomings" />

            <LinearLayout
                android:id="@+id/linearLayoutChartInfoContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/pieChart"
                app:layout_constraintEnd_toEndOf="@id/pieChart"
                app:layout_constraintStart_toStartOf="@id/pieChart"
                app:layout_constraintTop_toTopOf="@id/pieChart">

                <TextView
                    android:id="@+id/textViewPercentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/raisin_black"
                    android:textSize="18sp"
                    tools:text="Transport 26%" />

                <TextView
                    android:id="@+id/textViewAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/raisin_black"
                    android:textSize="48sp"
                    android:textStyle="bold"
                    tools:text="1 500" />

                <TextView
                    android:id="@+id/textViewAznMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_azn_month"
                    android:textColor="@color/raisin_black" />

                <TextView
                    android:id="@+id/textViewViewStatement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_view_statement"
                    android:textColor="@color/raisin_black" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewLabelCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/txt_categories"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pieChart" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCategories"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="14dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelCategories"
                tools:layout_editor_absoluteX="16dp"
                tools:listitem="@layout/item_category" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:constraint_referenced_ids="textViewExpenses, textViewLabelExpenses, textViewIncomings, textViewLabelIncomings, textViewCashback, textViewLabelCashback, pieChart, linearLayoutChartInfoContainer, textViewLabelCategories, recyclerViewCategories" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:indicatorColor="@color/bright_yellow" />

</androidx.constraintlayout.widget.ConstraintLayout>